# sgb_unlimiter.builder

./: .gitignore  README.md
01-obfuscated-pyarmor/: sgb_unlimiter.py
01-obfuscated-pyarmor/pyarmor_runtime_000000/: __init__.py
Python/00-src/: requirements.txt  sgb_unlimiter.py
Python/00-src/.pyarmor/pack/: hook-pyarmor_runtime_000000.py
Python/02-obfuscated-UPX/: upx-4.2.3-amd64_linux.tar.xz
Rust/: Cargo.toml  build.rs
Rust.runner/: Cargo.toml  build.rs
Rust.runner/src/: main.rs
Rust/sgb_unlimiter/: Cargo.toml
Rust/sgb_unlimiter/src/: .main.rs.swp  .printer.rs.swp  main.rs  printer.rs
Rust/src/: cleaner.rs  config.rs  external_suspend.rs  main.bak.rs  main.rs  printer.rs  privilege_checker.rs  proc_info.rs  proc_suspender.rs  process.rs  state.rs  target.rs  target_builder.rs
Rust/src/localutils/: mod.rs  printer.rs
Rust/src/processes/: mod.rs
Rust/src/windows_native_local/: ntbcd.rs  ntdbg.rs  ntexapi.rs  ntgdi.rs  ntimage.rs  ntioapi.rs  ntldr.rs  ntlpcapi.rs  ntmmapi.rs  ntobapi.rs  ntpebteb.rs  ntpfapi.rs  ntpnpapi.rs  ntpoapi.rs  ntpsapi.rs  ntregapi.rs  ntrtl.rs  ntsam.rs  ntseapi.rs  ntsmss.rs  ntwow64.rs  ntzwapi.rs  winsta.rs
linux-gnu/: Cargo.toml
linux-gnu/src/: decoder.rs  printer.rs
rust/: Cargo.toml
rust/src/: config.rs  decode.rs  error.rs  main.rs  printer.rs  process.rs  state.rs
windows-msvc/: Cargo.toml  build.rs
windows-msvc/src/: config.rs  decode.rs  error.rs  main.rs  privilige.rs  process.rs  state.rs
