[package]
name = "sgb_unlimiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
colored = "2.1.0"
console = "0.15.8"
winapi = { version="0.3.9", features=["tlhelp32"] }
# windows-native = "1.0.40"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Power",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_IO",
    "Wdk_Foundation",
    "Wdk_System_SystemServices",
    "Wdk_Storage_FileSystem",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security_Authentication_Identity",
    "Wdk_System_SystemInformation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_Threading",
    "Wdk_System_Registry",
    "Win32_System_PasswordManagement",
]
default-features = false


[build-dependencies]
static_vcruntime = "2.0.0"
winres = "0.1.12"
