[package]
name = "sgb_unlimiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
colored = "2.1.0"
console = "0.15.8"
winapi = { version="0.3.9", features=["tlhelp32"] }


# [build-dependencies]
# static_vcruntime = "2.0.0"
