[package]
name = "sgb_unlimiter"
version = "1.1.7"
edition = "2021"
authors = [
  "ParkSnoopy",
  "mil-acc-github <milacc0000@gmail.com>"
]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ansi-escapes = "0.2"
base116  = { version="0.1", features=[ "alloc" ] }
colored = "2.1"
ctrlc = "3.4"
eyre = "0.6"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"
ntapi    = { version="0.4", features=[ "user" ] }
tasklist = "0.2"
winapi   = { version="0.3", features=[ "processthreadsapi", "winnt", "winbase", "securitybaseapi", "errhandlingapi" ] }


[build-dependencies]
eyre = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
