[package]
name = "sgb_unlimiter"
version = "1.1.7"
edition = "2021"
authors = [
  "ParkSnoopy <sunwoo2539@gmail.com>",
  "mil-acc-github <milacc0000@gmail.com>"
]
license = "GPL-3.0-or-later"


[profile.release]
strip = true
lto   = true


[dependencies]
ansi-escapes = "0.2"
nu-ansi-term = "0.50.1"
base116  = { version="0.1", features=["alloc"] }
ctrlc = "3.4"
eyre = "0.6"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.11.5"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"
tasklist = "0.2"
ntapi    = { version="0.4", features=["user"] }
winapi   = { version="0.3", features=["processthreadsapi", "winnt", "winbase", "securitybaseapi", "errhandlingapi"] }


[build-dependencies]
eyre = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
